bug: removing z-index to prevent layers bugs

--- a/styles/components/Shop/ShopSection.module.scss
+++ b/styles/components/Shop/ShopSection.module.scss
@@ -3,8 +3,8 @@
 .shop-section {
   background: transparent;
   position: relative;
-  z-index: 1;
   opacity: 1;
+  z-index: 200 !important;
   transform: scale(1);
   display: flex;
   align-items: center;
@@ -20,6 +20,7 @@
 }
 
 .shop-section__inner-row {
+  z-index: 100 !important;
   align-items: center;
   display: flex;
   flex-wrap: nowrap;
@@ -51,7 +52,7 @@
 
 .shop-section__button-down {
   position: fixed;
-  z-index: 10;
+  z-index: 30 !important;
   bottom: 5rem !important;
   transform: translateX(-50%);
   left: 50%;
@@ -59,7 +60,7 @@
 
 .shop-section__button-up {
   position: fixed;
-  z-index: 10;
+  z-index: 30 !important;
   top: 5rem !important;
   transform: translateX(-50%);
   left: 50%;
